--- a/RecipesProject/index.html
+++ b/RecipesProject/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
   </head>
   <body>
     <div id="root"></div>
