--- a/ReduxProject/frontend/index.html
+++ b/ReduxProject/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/Assets/android-chrome-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link href="/src/styles.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Redux-Products</title>
   </head>
   <body>
     <div id="root"></div>
