--- a/ReduxProject/frontend/index.html
+++ b/ReduxProject/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="src/Assets/android-chrome-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link href="/src/styles.css" rel="stylesheet">
-    <title>Redux-Products</title>
+    <title>DarkKart</title>
   </head>
   <body>
     <div id="root"></div>
