--- a/ReduxProject/frontend/index.html
+++ b/ReduxProject/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="src/Assets/assets_task_01jyvvhrfjey8t5kh7yxk31y7a_1751134109_img_0.webp" type="image/x-icon">
      <link href="/src/styles.css" rel="stylesheet">
     <title>DarkKart</title>
   </head>
